# LRP-for-ResNet

./: .gitignore  LICENSE  README.md  evaluate.py  exp.sh  oneshot.py  pyproject.toml  train.py  visualize.py
checkpoints/: README.md
configs/: CUB_resnet18.json  CUB_resnet34.json  CUB_resnet50.json  CUB_resnet50v2.json  ImageNet_resnet50.json
data/: CUB.py  RDD.py  RDD_4.py  RDD_bbox.py  __init__.py  imagenet.py  sampler.py
datasets/: README.md
metrics/: accuracy.py  base.py  patch_insdel.py
models/: __init__.py  attention_branch.py  lrp.py  rise.py
optim/: __init__.py
scripts/: calc_dataset_info.py  visualize_transforms.py
src/: data.py  data_processing.py  lrp.py  lrp_layers.py  scorecam.py  utils.py
utils/: loss.py  utils.py  visualize.py
